--- a/lab01/backend/package.json
+++ b/lab01/backend/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "backend",
+  "name": "mybackend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.3"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "ioredis": "^5.0.2",
+    "redis": "^4.0.4"
+  }
 }
