--- a/kolokwium1/keyboardnginx/default.conf
+++ b/kolokwium1/keyboardnginx/default.conf
@@ -1,9 +1,9 @@
-upstream mybackend {
-    server mybackend:5000;
+upstream keyboardbackend {
+    server keyboardbackend:5000;
 }
 
-upstream myfrontend {
-    server myfrontend:3000;
+upstream keyboardfrontend {
+    server keyboardfrontend:3000;
 }
 
 server {
@@ -11,15 +11,15 @@ server {
 
     location /api {
         rewrite /api/(.*) /$1 break;
-        proxy_pass http://mybackend;
+        proxy_pass http://keyboardbackend;
     }
 
     location / {
-        proxy_pass http://myfrontend;
+        proxy_pass http://keyboardfrontend;
     }
 
     location /sockjs-node {
-        proxy_pass http://myfrontend;
+        proxy_pass http://keyboardfrontend;
         proxy_redirect off;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
